Fixed the issue with headers not showing with the bot

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -70,7 +70,7 @@
     justify-content: flex-start;
     padding-top: 3rem;
     z-index: 20;
-    margin-top: 15%;
+    margin-top: 20%;
   }
 
   .closeMobileMenu {
